<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Smart Motion</string>
    <string name="action_settings">Settings</string>

    <string name="quick_answer">Quick Answer</string>
    <string name="easy_reject">Easy Reject</string>
    <string name="smart_silent">Smart Silent</string>
    <string name="in_pocket">In Pocket</string>
    <string name="pedometer">Pedometer</string>
    <string name="user_activity">User Activity</string>
    <string name="significant_motion">Significant Motion</string>
    <string name="free_fall">Free Fall</string>
    <string name="pdr">PDR</string>
    <string name="configurable_gesture">Configurable Gesture</string>

    <string name="summary_quick_answer">Pick up to answer call</string>
    <string name="summary_easy_reject">Shake to reject call</string>
    <string name="summary_smart_silent">Face down to silencing incoming call ringtone</string>
    <string name="summary_in_pocket">In Pocket Detection</string>
    <string name="summary_pedometer">To enbale or disable pedometer</string>
    <string name="summary_user_activity">User Activity Detection</string>
    <string name="summary_significant_motion">Significant Motion Detection</string>
    <string name="summary_free_fall">Free Fall Detection</string>
    <string name="summary_snapshot">Snapshot Gesture Detection</string>
    <string name="summary_pdr">PDR Detection</string>
    <string name="summary_configurable_gesture">Gesture Configuration</string>

    <string name="quick_answer_description">Bring the device close to your ear
         to answer an incoming call</string>
    <string name="easy_reject_description">Shake the device to reject an incoming call</string>
    <string name="smart_silent_description">Turn the device to face down to silencing current
        incoming call ringtone</string>
    <string name="in_pocket_description">In Pocket Detection</string>
    <string name="pdr_step_lebel">Step length: </string>
    <string name="pdr_step_unit">cm</string>
    <string name="pdr_alert_message">Ensure didn\'t input the step length?</string>
    <string name="test_Text">Start/End the testing</string>
    <string name="set">set</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="change_to_demo_mode">To demo mode</string>
    <string name="change_to_powerconsumption_mode">To power mode</string>

    <string name="exit_application">Exit</string>

    <string name="gesture_label">Gesture</string>
    <string name="shake">SHAKE</string>
    <string name="pickup">PICK_UP</string>
    <string name="flip">FLIP</string>
    <string name="snapshot">SNAPSHOT</string>
    <string name="configurable_label">Configurable-Gesture</string>
    <string name="wake_gesture">WAKE_GESTURE</string>
    <string name="glance_gesture">GLANCE_GESTURE</string>
    <string name="pickup_gesture">PICK_UP_GESTURE</string>

    <string name="add">Add</string>
    <string name="delete">Delete</string>

    <string name="add_gesture_alert1">Gesure type or sensory type can\'t be empty.</string>
    <string name="add_gesture_alert2">The gesture has been added already.</string>

</resources>
