<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:background="@drawable/border"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/gesture_label"
                android:textColor="@color/orange" >
            </TextView>

            <RadioGroup
                android:id="@+id/gesture_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <RadioButton
                    android:id="@+id/shake"
                    style="@style/gesture_radiobutton_style"
                    android:text="@string/shake" >
                </RadioButton>

                <RadioButton
                    android:id="@+id/pickup"
                    style="@style/gesture_radiobutton_style"
                    android:text="@string/pickup" >
                </RadioButton>

                <RadioButton
                    android:id="@+id/flip"
                    style="@style/gesture_radiobutton_style"
                    android:text="@string/flip" >
                </RadioButton>

                <RadioButton
                    android:id="@+id/snapshot"
                    style="@style/gesture_radiobutton_style"
                    android:text="@string/snapshot" >
                </RadioButton>
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/configurable_label"
                android:textColor="@color/orange" >
            </TextView>

            <RadioGroup
                android:id="@+id/sensor_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <RadioButton
                    android:id="@+id/wake_gesture"
                    style="@style/gesture_radiobutton_style"
                    android:text="@string/wake_gesture" >
                </RadioButton>

                <RadioButton
                    android:id="@+id/glance_gesture"
                    style="@style/gesture_radiobutton_style"
                    android:text="@string/glance_gesture" >
                </RadioButton>

                <RadioButton
                    android:id="@+id/pickup_gesture"
                    style="@style/gesture_radiobutton_style"
                    android:text="@string/pickup_gesture" >
                </RadioButton>
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical" >

            <Button
                android:id="@+id/add"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:background="@color/blue"
                android:text="@string/add"
                android:textColor="@color/black"
                android:textSize="@dimen/textSize10"
                android:gravity="center" >
            </Button>

            <Button
                android:id="@+id/delete"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:background="@color/blue"
                android:text="@string/delete"
                android:textColor="@color/black"
                android:textSize="@dimen/textSize10"
                android:gravity="center" >
            </Button>
        </LinearLayout>

        <LinearLayout
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <ListView
                android:id="@+id/list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/border" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>