<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"  >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/pdr_step_lebel"
            android:textSize="18sp" />
        <EditText
            android:id="@+id/stepLength"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:inputType="number"
            android:singleLine="true"
            android:textSize="18sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/pdr_step_unit"
            android:textSize="18sp" />
        <Button
            android:id="@+id/set"
            android:layout_width="50dp"
            android:layout_height="26dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:background="@color/blue"
            android:text="@string/set"
            android:textColor="@color/black"
            android:textSize="14sp" >
        </Button>
    </LinearLayout>

</LinearLayout>